Fixed Library Coments
Added: Documentation file

Added so when you look at the source code when using the library the comments will show up with the source code

Note:: need to change the xml documentation file path to correct path on your computer

--- a/htmlInterpreter.csproj
+++ b/htmlInterpreter.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,6 +8,11 @@
     <Authors>Ali Al Rashini</Authors>
     <Company>Techpology</Company>
     <Product>htmlLibrary</Product>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>F:\c#\TechP\HtmlInterpreter_Lib\htmlInterpreter.xml</DocumentationFile>
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
