--- a/htmlInterpreter.csproj
+++ b/htmlInterpreter.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>F:\c#\TechP\HtmlInterpreter_Lib\htmlInterpreter.xml</DocumentationFile>
+    <DocumentationFile>HtmlInterpreter_Lib\htmlInterpreter.xml</DocumentationFile>
     <OutputPath></OutputPath>
   </PropertyGroup>
 
